fixed dashboard activity table overflow

--- a/src/main/web/styling/app/_dashboard.scss
+++ b/src/main/web/styling/app/_dashboard.scss
@@ -330,6 +330,8 @@ iframe {
 
 .rs-dashboard-activity {
   height: auto;
+  overflow-y: hidden;
+  overflow-x: auto;
 
   grid-area: activity;
   padding: 30px 40px 25px 40px;
